Task3/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ivolve-task3
  namespace: ivolve
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
      - name: web-app
        image: alyesmaeil/springboot-gradle-web-app:latest
        ports:
        - containerPort: 8081
