Task3/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ivolve-task3
  namespace: ivolve
spec:
  selector:
    app: web-app
  ports:
  - protocol: TCP
    port: 80        
    targetPort: 8081
  type: ClusterIP
