Task3/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ivolve-ingress
  namespace: ivolve
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx  
  rules:
  - host: ing-1997727146.us-east-1.elb.amazonaws.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ivolve-task3
            port:
              number: 80
